[gd_scene load_steps=32 format=3 uid="uid://d1inwx375g7p2"]

[ext_resource type="Theme" uid="uid://c8hkuuxu5sphv" path="res://UI/profile_theme.tres" id="1_4so2x"]
[ext_resource type="Script" path="res://UI/Profile.gd" id="2_q81po"]
[ext_resource type="Texture2D" uid="uid://c8vpj4nhp2w77" path="res://Assets/profile_icons.png" id="3_g801y"]
[ext_resource type="Texture2D" uid="uid://dghlakxqu3dx1" path="res://Assets/profile_viewport_border.png" id="3_k44le"]
[ext_resource type="FontFile" uid="uid://bu01wtwvvyti5" path="res://Fonts/tilda-sans_medium.ttf" id="4_i2e2t"]
[ext_resource type="LabelSettings" uid="uid://4gvodh4epwcf" path="res://UI/profile_default_labelsetting.tres" id="5_r3tv8"]
[ext_resource type="Texture2D" uid="uid://sw5c6crwk2m1" path="res://Assets/profile_settings_border.png" id="5_wg6bn"]
[ext_resource type="StyleBox" uid="uid://b8gh7nmrqey3y" path="res://UI/guestbook_stylebox.tres" id="9_8b4ps"]
[ext_resource type="LabelSettings" uid="uid://pifwe1q2uyxo" path="res://UI/profile_header_label2settings.tres" id="10_5dpmr"]
[ext_resource type="Texture2D" uid="uid://boghw7o88g1ox" path="res://UI/profille_icon_close.tres" id="11_5v22q"]
[ext_resource type="Texture2D" uid="uid://b324cbqwwjlno" path="res://UI/inventory_background_text.tres" id="11_dqtjb"]
[ext_resource type="Texture2D" uid="uid://cqvtmvye3c3vr" path="res://tabsheet.png" id="12_aauc3"]
[ext_resource type="Script" path="res://UI/knapsack_pocket_front.gd" id="14_leedk"]
[ext_resource type="Script" path="res://UI/knapsack_lunchbox.gd" id="15_c7sum"]
[ext_resource type="Script" path="res://UI/knapsack_pocket_big.gd" id="16_lamh6"]
[ext_resource type="Script" path="res://UI/knapsack_folder.gd" id="17_i2r5v"]
[ext_resource type="Texture2D" uid="uid://bma2qyh3yeupi" path="res://Assets/inventory_border.png" id="18_88ywt"]
[ext_resource type="Script" path="res://UI/knapsack_figurinesets.gd" id="18_xgetp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5qts3"]
atlas = ExtResource("3_g801y")
region = Rect2(0, 225, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0mnd"]
atlas = ExtResource("3_g801y")
region = Rect2(150, 225, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8fqc"]
atlas = ExtResource("3_g801y")
region = Rect2(450, 0, 300, 225)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_q0uyh"]
load_path = "res://.godot/imported/profile_settings_tile.png-a5e9fb898d00e643143ce2324a85853d.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mey4s"]
texture = SubResource("CompressedTexture2D_q0uyh")
expand_margin_left = 12.0
expand_margin_top = 12.0
expand_margin_right = 12.0
expand_margin_bottom = 12.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="FontVariation" id="FontVariation_7lc83"]
base_font = ExtResource("4_i2e2t")
variation_embolden = 0.5
variation_transform = Transform2D(1.05, 0.05, 0.05, 1.05, 0, 0)
spacing_glyph = 4
spacing_space = 8

[sub_resource type="LabelSettings" id="LabelSettings_bk80j"]
font = SubResource("FontVariation_7lc83")
font_size = 48
font_color = Color(0.0117647, 0.270588, 0.0117647, 1)
outline_size = 6
outline_color = Color(0.231373, 0.819608, 0.945098, 1)
shadow_size = 4
shadow_color = Color(0.0705882, 0.0235294, 0.384314, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vka41"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heyha"]
content_margin_left = 16.0
content_margin_top = 32.0
content_margin_right = 16.0
content_margin_bottom = 32.0
bg_color = Color(0.984314, 0.941176, 0.00784314, 0.607843)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.984314, 0.941176, 0.00784314, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40mc0"]
content_margin_left = 16.0
content_margin_top = 32.0
content_margin_right = 16.0
content_margin_bottom = 32.0
bg_color = Color(1, 0.643137, 0.0313726, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.231373, 0.819608, 0.945098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_scmg4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b6ak0"]
atlas = ExtResource("12_aauc3")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o3ju"]
atlas = ExtResource("12_aauc3")
region = Rect2(20, 20, 20, 20)

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_4so2x")
script = ExtResource("2_q81po")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.15
anchor_right = 0.88
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PlayerName" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.034
anchor_right = 0.434
anchor_bottom = 0.14
offset_top = 10.0
offset_right = -6.10352e-05
offset_bottom = -0.0800018
grow_horizontal = 2

[node name="LastPlace" type="TextureButton" parent="Panel"]
custom_minimum_size = Vector2(640, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.081
anchor_top = 0.19
anchor_right = 0.493
anchor_bottom = 0.782
offset_left = -0.503998
offset_top = -0.25
offset_right = -10.488
offset_bottom = 0.149963
grow_vertical = 2
tooltip_text = "Load from here"
stretch_mode = 4

[node name="Border" type="TextureRect" parent="Panel/LastPlace"]
show_behind_parent = true
layout_mode = 0
offset_left = -39.0
offset_top = -25.0
offset_right = 675.0
offset_bottom = 434.0
texture = ExtResource("3_k44le")

[node name="Guestbook" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.794
anchor_right = 0.201
anchor_bottom = 1.016
offset_top = 0.0499878
offset_right = -0.12001
offset_bottom = 0.199951
grow_vertical = 0
tooltip_text = "Guestbook"

[node name="TextureRect" type="TextureRect" parent="Panel/Guestbook"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156
anchor_top = -0.1
anchor_right = 0.858
anchor_bottom = 0.98
offset_left = 9.89998
offset_top = 4.0
offset_right = 1.94998
offset_bottom = -8.0
texture = SubResource("AtlasTexture_5qts3")

[node name="Close" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.262
anchor_top = 0.795
anchor_right = 0.463
anchor_bottom = 1.039
offset_left = -0.440002
offset_top = 0.375
offset_right = -0.559998
offset_bottom = -14.325
tooltip_text = "Save + close"

[node name="TextureRect" type="TextureRect" parent="Panel/Close"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.475
offset_top = -5.0
offset_right = -9.47501
offset_bottom = -5.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_k0mnd")
expand_mode = 3
stretch_mode = 2

[node name="Tickets" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.635
anchor_top = -0.075
anchor_right = 0.903
anchor_bottom = 0.258
offset_left = 210.4
offset_bottom = -184.815
grow_horizontal = 0
texture = SubResource("AtlasTexture_i8fqc")
stretch_mode = 1

[node name="Box" type="HBoxContainer" parent="Panel/Tickets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 49.0
offset_right = -65.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -30
alignment = 1

[node name="Settings" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.294
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.200012
offset_bottom = 0.19989
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mey4s")

[node name="Border" type="TextureRect" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.616
offset_top = -48.25
offset_right = 57.0
offset_bottom = 69.8001
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wg6bn")

[node name="Label" type="Label" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.021
anchor_right = 1.0
anchor_bottom = 0.146
offset_top = 0.11904
offset_bottom = -67.3165
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_bk80j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="All Volume" type="HSlider" parent="Panel/Settings" groups=["AudioSliders"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="All Volume Label" type="Label" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.185
anchor_right = 0.236
anchor_bottom = 0.307
offset_right = -94.3232
offset_bottom = -0.239182
theme_override_font_sizes/font_size = 24
text = "All 
Volume"
label_settings = ExtResource("5_r3tv8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound Effects" type="HSlider" parent="Panel/Settings" groups=["AudioSliders"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.413
anchor_right = 1.0
anchor_bottom = 0.434
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sound Effects Label" type="Label" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.371
anchor_right = 0.15
anchor_bottom = 0.5
offset_right = 0.294395
offset_bottom = -11.9599
theme_override_font_sizes/font_size = 24
text = "Sound 
Effects"
label_settings = ExtResource("5_r3tv8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="HSlider" parent="Panel/Settings" groups=["AudioSliders"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.6
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="Music Label" type="Label" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.576
anchor_right = 0.15
anchor_bottom = 0.714
offset_top = 1.52588e-05
offset_right = 0.294395
offset_bottom = -69.954
theme_override_font_sizes/font_size = 24
text = "Music 
Volume"
label_settings = ExtResource("5_r3tv8")
horizontal_alignment = 1

[node name="Ambient Volume" type="HSlider" parent="Panel/Settings" groups=["AudioSliders"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 0.8
offset_top = -37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="Ambient Volume Label" type="Label" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 0.191
anchor_bottom = 0.84
offset_top = 3.05176e-05
offset_right = -24.5811
offset_bottom = 0.00296021
theme_override_font_sizes/font_size = 24
text = "Ambient "
label_settings = ExtResource("5_r3tv8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Custom Cursor Label" type="Label" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.902
anchor_right = 0.2
anchor_bottom = 0.967
offset_top = 8.75848
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Mouse"
label_settings = ExtResource("5_r3tv8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Custom Cursor Box" type="HBoxContainer" parent="Panel/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.248
anchor_top = 0.9
anchor_right = 0.942
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 2

[node name="MouseTailLabel" type="Label" parent="Panel/Settings/Custom Cursor Box"]
layout_mode = 2
tooltip_text = "Toggle Mouse Tail"
mouse_filter = 1
text = "Tail:"
label_settings = ExtResource("5_r3tv8")

[node name="MouseTailCheck" type="CheckBox" parent="Panel/Settings/Custom Cursor Box"]
layout_mode = 2
mouse_filter = 1

[node name="MouseTailOptions" type="Panel" parent="Panel/Settings"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.095
anchor_top = 0.057
anchor_right = 0.882
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("9_8b4ps")

[node name="Header" type="Label" parent="Panel/Settings/MouseTailOptions"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.012
anchor_right = 0.725
anchor_bottom = 0.168
offset_right = 0.0784912
offset_bottom = 0.137375
text = "Tail Settings"
label_settings = ExtResource("10_5dpmr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="Panel/Settings/MouseTailOptions"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.811
anchor_right = 1.0
anchor_bottom = 0.206
offset_left = 75.0573
offset_bottom = -74.966
grow_horizontal = 0
icon = ExtResource("11_5v22q")

[node name="GridContainer" type="GridContainer" parent="Panel/Settings/MouseTailOptions"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.768
offset_left = 23.8723
offset_top = 107.768
offset_right = -24.2563
offset_bottom = 8.28256
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 48
theme_override_constants/v_separation = 64
columns = 2

[node name="LenLabel" type="Label" parent="Panel/Settings/MouseTailOptions/GridContainer"]
layout_mode = 2
text = "Length"
label_settings = ExtResource("5_r3tv8")

[node name="SpinBox" type="SpinBox" parent="Panel/Settings/MouseTailOptions/GridContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
alignment = 2
custom_arrow_step = 1.0

[node name="ActLabel" type="Label" parent="Panel/Settings/MouseTailOptions/GridContainer"]
layout_mode = 2
text = "Action"
label_settings = ExtResource("5_r3tv8")

[node name="ActButton" type="OptionButton" parent="Panel/Settings/MouseTailOptions/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Default"
popup/item_0/id = 0
popup/item_1/text = "Moon Mouse"
popup/item_1/id = 1
popup/item_2/text = "Circle"
popup/item_2/id = 2

[node name="TAB" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.917
anchor_top = 0.04
anchor_right = 0.962
anchor_bottom = 0.127
offset_left = 14.1998
offset_bottom = -31.5
grow_horizontal = 0
icon = ExtResource("11_5v22q")
icon_alignment = 1

[node name="Warning" type="PopupPanel" parent="."]
initial_position = 1
title = "Warning"
size = Vector2i(341, 200)
min_size = Vector2i(100, 200)
content_scale_aspect = 1

[node name="MarginContainer" type="MarginContainer" parent="Warning"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 8.0
offset_right = 325.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Warning/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Warning Label Text"
label_settings = ExtResource("5_r3tv8")
horizontal_alignment = 1

[node name="Confirm" type="Button" parent="Warning/MarginContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.0705882, 0.0235294, 0.384314, 1)
theme_override_colors/font_pressed_color = Color(0.0705882, 0.0235294, 0.384314, 1)
theme_override_colors/font_hover_color = Color(0.231373, 0.819608, 0.945098, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_vka41")
theme_override_styles/hover = SubResource("StyleBoxFlat_heyha")
theme_override_styles/pressed = SubResource("StyleBoxFlat_40mc0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_scmg4")
text = "Confirm"

[node name="Knapsack" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.075
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Background" type="TextureRect" parent="Knapsack"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_dqtjb")
stretch_mode = 1

[node name="TabContainer" type="TabContainer" parent="Knapsack"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
drag_to_rearrange_enabled = true

[node name="Front Pocket" type="Panel" parent="Knapsack/TabContainer"]
texture_filter = 1
clip_contents = true
layout_mode = 2
mouse_filter = 1
script = ExtResource("14_leedk")
metadata/name = "front_pocket"

[node name="Container" type="HBoxContainer" parent="Knapsack/TabContainer/Front Pocket"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.123
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Inventory" type="ScrollContainer" parent="Knapsack/TabContainer/Front Pocket/Container"]
layout_mode = 2
size_flags_horizontal = 2
horizontal_scroll_mode = 3

[node name="Items" type="GridContainer" parent="Knapsack/TabContainer/Front Pocket/Container/Inventory"]
custom_minimum_size = Vector2(750, 550)
layout_mode = 2
size_flags_horizontal = 3
columns = 8

[node name="Notebook" type="Panel" parent="Knapsack/TabContainer/Front Pocket/Container"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Knapsack/TabContainer/Front Pocket/Container/Notebook"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="Knapsack/TabContainer/Front Pocket/Container/Notebook/ScrollContainer"]
layout_mode = 2

[node name="Lunchbox" type="Panel" parent="Knapsack/TabContainer"]
visible = false
texture_filter = 1
layout_mode = 2
mouse_filter = 2
script = ExtResource("15_c7sum")
metadata/name = "lunchbox"

[node name="ScrollContainer" type="ScrollContainer" parent="Knapsack/TabContainer/Lunchbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Container" type="GridContainer" parent="Knapsack/TabContainer/Lunchbox/ScrollContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Big Pocket" type="Panel" parent="Knapsack/TabContainer"]
visible = false
texture_filter = 1
layout_mode = 2
mouse_filter = 1
script = ExtResource("16_lamh6")
metadata/name = "big_pocket"

[node name="ScrollContainer" type="ScrollContainer" parent="Knapsack/TabContainer/Big Pocket"]
custom_minimum_size = Vector2(320, 180)
layout_mode = 1
offset_top = 80.0
offset_right = 1451.0
offset_bottom = 773.0

[node name="Container" type="VFlowContainer" parent="Knapsack/TabContainer/Big Pocket/ScrollContainer"]
layout_mode = 2

[node name="Figurines" type="Panel" parent="Knapsack/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
script = ExtResource("18_xgetp")

[node name="ScrollContainer" type="ScrollContainer" parent="Knapsack/TabContainer/Figurines"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 1184.0
offset_bottom = 792.0

[node name="VFlowContainer" type="VFlowContainer" parent="Knapsack/TabContainer/Figurines/ScrollContainer"]
layout_mode = 2

[node name="Folder" type="Panel" parent="Knapsack/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
script = ExtResource("17_i2r5v")

[node name="ScrollContainer" type="ScrollContainer" parent="Knapsack/TabContainer/Folder"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 1184.0
offset_bottom = 792.0

[node name="VFlowContainer" type="VFlowContainer" parent="Knapsack/TabContainer/Folder/ScrollContainer"]
layout_mode = 2

[node name="Border" type="TextureRect" parent="Knapsack"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.075
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_88ywt")

[node name="KnapsackButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.1
anchor_bottom = 0.05
offset_right = -128.0
offset_bottom = -110.3
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_b6ak0")
texture_hover = SubResource("AtlasTexture_6o3ju")
stretch_mode = 5

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="mouse_entered" from="Panel/PlayerName" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/PlayerName" to="." method="_on_input_mouse_exited"]
[connection signal="text_submitted" from="Panel/PlayerName" to="." method="_on_player_name_text_submitted"]
[connection signal="mouse_entered" from="Panel/LastPlace" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/LastPlace" to="." method="_on_input_mouse_exited"]
[connection signal="pressed" from="Panel/LastPlace" to="." method="_on_last_place_pressed"]
[connection signal="mouse_entered" from="Panel/Guestbook" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Guestbook" to="." method="_on_input_mouse_exited"]
[connection signal="pressed" from="Panel/Guestbook" to="." method="_on_guestbook_pressed"]
[connection signal="mouse_entered" from="Panel/Close" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Close" to="." method="_on_input_mouse_exited"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
[connection signal="drag_ended" from="Panel/Settings/All Volume" to="." method="_on_settings_drag_ended" binds= ["All Volume"]]
[connection signal="mouse_entered" from="Panel/Settings/All Volume" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/All Volume" to="." method="_on_input_mouse_exited"]
[connection signal="drag_ended" from="Panel/Settings/Sound Effects" to="." method="_on_settings_drag_ended" binds= ["Sound Effects"]]
[connection signal="mouse_entered" from="Panel/Settings/Sound Effects" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/Sound Effects" to="." method="_on_input_mouse_exited"]
[connection signal="drag_ended" from="Panel/Settings/Music" to="." method="_on_settings_drag_ended" binds= ["Music"]]
[connection signal="mouse_entered" from="Panel/Settings/Music" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/Music" to="." method="_on_input_mouse_exited"]
[connection signal="drag_ended" from="Panel/Settings/Ambient Volume" to="." method="_on_settings_drag_ended" binds= ["Ambient"]]
[connection signal="mouse_entered" from="Panel/Settings/Ambient Volume" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/Ambient Volume" to="." method="_on_input_mouse_exited"]
[connection signal="child_entered_tree" from="Panel/Settings/Custom Cursor Box" to="." method="_on_custom_cursor_box_child_entered_tree"]
[connection signal="mouse_entered" from="Panel/Settings/Custom Cursor Box/MouseTailCheck" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/Custom Cursor Box/MouseTailCheck" to="." method="_on_input_mouse_exited"]
[connection signal="pressed" from="Panel/Settings/Custom Cursor Box/MouseTailCheck" to="." method="_on_mouse_tail_check_pressed"]
[connection signal="hidden" from="Panel/Settings/MouseTailOptions" to="." method="_on_mouse_tail_options_hidden"]
[connection signal="pressed" from="Panel/Settings/MouseTailOptions/Close" to="." method="_on_mouse_tail_close_pressed"]
[connection signal="mouse_entered" from="Panel/Settings/MouseTailOptions/GridContainer/SpinBox" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/MouseTailOptions/GridContainer/SpinBox" to="." method="_on_input_mouse_exited"]
[connection signal="value_changed" from="Panel/Settings/MouseTailOptions/GridContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="item_selected" from="Panel/Settings/MouseTailOptions/GridContainer/ActButton" to="." method="_on_act_button_item_selected"]
[connection signal="mouse_entered" from="Panel/Settings/MouseTailOptions/GridContainer/ActButton" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Settings/MouseTailOptions/GridContainer/ActButton" to="." method="_on_input_mouse_exited"]
[connection signal="mouse_entered" from="TAB" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="TAB" to="." method="_on_input_mouse_exited"]
[connection signal="pressed" from="TAB" to="." method="_on_tab_pressed"]
[connection signal="popup_hide" from="Warning" to="." method="_on_warning_popup_hide"]
[connection signal="pressed" from="Warning/MarginContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="visibility_changed" from="Knapsack" to="Knapsack/TabContainer/Front Pocket" method="_load_container_icons"]
[connection signal="visibility_changed" from="Knapsack" to="Knapsack/TabContainer/Lunchbox" method="_load_container_icons"]
[connection signal="visibility_changed" from="Knapsack" to="Knapsack/TabContainer/Big Pocket" method="_load_container_icons"]
[connection signal="visibility_changed" from="Knapsack" to="Knapsack/TabContainer/Figurines" method="_load_container_icons"]
[connection signal="visibility_changed" from="Knapsack" to="Knapsack/TabContainer/Folder" method="_load_container_icons"]
[connection signal="reload_icons" from="Knapsack/TabContainer/Front Pocket" to="Knapsack/TabContainer/Front Pocket" method="_load_container_icons"]
[connection signal="reload_icons" from="Knapsack/TabContainer/Front Pocket" to="Knapsack/TabContainer/Lunchbox" method="_load_container_icons"]
[connection signal="reload_icons" from="Knapsack/TabContainer/Front Pocket" to="Knapsack/TabContainer/Big Pocket" method="_load_container_icons"]
[connection signal="reload_icons" from="Knapsack/TabContainer/Front Pocket" to="Knapsack/TabContainer/Figurines" method="_load_container_icons"]
[connection signal="mouse_entered" from="KnapsackButton" to="." method="_on_input_mouse_entered"]
[connection signal="mouse_exited" from="KnapsackButton" to="." method="_on_input_mouse_exited"]
[connection signal="pressed" from="KnapsackButton" to="." method="_on_knapsack_pressed"]
